--- a/TypeNetCLI/TypeNetCLI.csproj
+++ b/TypeNetCLI/TypeNetCLI.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <StartupObject>TypeCLI.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
